--- a/views/register.ejs
+++ b/views/register.ejs
@@ -72,5 +72,26 @@
         
       <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
     </div>
+    <div class="card mb-3" style="max-width:100%;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="https://i.imgur.com/SqQWbJb.png" class="card-img" alt="ss">
+    </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title" href="/app">The Hospital Tracker</h5>
+            <p class="card-text">A handy tool to get your hospital's information.</p>
+            <p class="card-text">
+              <a href="/app">
+                <i class="fa fa-download" aria-hidden="true"></i> Download
+              </a>
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+  
