--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -33,31 +33,45 @@
   
      </div>
   <p>Get information on your hospital - Refusals,Beds and much more...</p>
-    <p>Information here is either from recognized news or from authentic crowdsourced information</p>
+    <small>Information here is either from recognized news or from authentic crowdsourced information</small>
 
   </div>
 </div>
 
 <div class="container-fluid" >
 
-<div id="info" style="">
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h4>What Is Hospital Tracker</h4>
-    <p class="lead"><small>
-      In this precarious situation of the COVID-19 worldwide, the healthcare system has been working assiduously. 
-      Yet there have been cases wherein people could not receive the required treatment in time.
-      The hospital tracker is a platform that makes you not only aware of the capacity, 
-      refusal cases and news of hospitals that are nearby. 
-      You could help us in being updated with the information displayed. 
-      Sign Up on The Hospital Tracker and add/rectify or submit your problems that you have faced in any hospital.
-   </small>
-    </p>
-      <a  href="/users/login"  class="btn btn-success">Submit a Problem</a>
-  </div>
+<div id="info" >
+
 </div>
-</div>
-</div>
+<div class="card mb-3" style="max-width:100%;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="https://i.imgur.com/SqQWbJb.png" class="card-img" alt="ss">
+    </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title" href="/app">The Hospital Tracker</h5>
+            <p class="card-text">A handy tool to get your hospital's information.</p>
+            <p class="card-text">
+              <a href="/app">
+                <i class="fa fa-download" aria-hidden="true"></i> Install Our App
+              </a>
+            </p>
+          <p class="card-text">
+            The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data.</p>
+<br> We understand the risks of delivering misleading informationt to the public and we take that
+    consideration very seriously. Hence the data here has been obtained from authenticated news reports
+    and media sources. Nevertheless if you feel something is wrongly posed or factually incorrect you 
+    are welcome to put a rectification report and submit to us.
+          </p>
+          </div>
+
+        </div>
+      </div>
+    </div></div>
 
 
 <script type="text/javascript">
@@ -103,7 +117,7 @@ url="/search/";
       //now we can access stuff off res
       if(str!=""){
       $('#info').append(`
-      <div class="card" style="width: 90%;">
+      <div class="card mb-3" >
   <div class="card-body">
     <h5 id="hospital-rectify" class="card-title">${res[0].Hospital}</h5>
     <p class="card-text">Info:${res[0].info}</p>
