--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,8 @@
+ <title>About Hospital Tracker</title>
+<meta name="description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data" />
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
   <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
