--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,10 @@
+<head>
+  <title>Hospital Tracker|Register</title>
+  <meta name="description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data" />
+</head>
 <script src="https://www.google.com/recaptcha/api.js" async="" defer=""></script>
 
 <div class="row mt-5">
