--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,10 @@
   <head>
   <link rel="icon" type="image" href="https://i.imgur.com/43jJjSE.jpg">
   
-
+<meta name="description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -22,7 +25,6 @@
       integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
       crossorigin="anonymous"
     ></script>
-    <title>Hospital Tracker</title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <a class="navbar-brand" href="/">
     <img src="https://i.imgur.com/43jJjSE.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
