--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <link rel="icon" type="image" href="https://i.imgur.com/43jJjSE.jpg">
-  
+  <title>Hospital Tracker</title>
 <meta name="description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
 hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
 authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
