--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,9 @@
   <p class="lead">You can contact us in several ways. We have built the report page which is capable of holding most of your problems.
   Nevertheless you can contact us directly</p>
   <hr class="my-4">
-  <p>Email: lobrockyl@gmail.com</p>
+    <p>Admin Email: admin@thehospitaltracker.com</p>
+    <p>Official Email: hospitaltracker.co@gmail.com</p>
+  <p>Social Email: lobrockyl@gmail.com</p>
   <a class="btn btn-primary btn-lg" href="/about" role="button">Learn more</a>
 </div>
 <div class="card mb-3" style="max-width:100%;">
