--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,31 @@
   <head>
   <link rel="icon" type="image" href="https://i.imgur.com/43jJjSE.jpg">
   <title>Hospital Tracker</title>
+  <meta name="title" content="Hospital Tracker">
+<meta name="description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data">
+<meta name="Keywords" content="Hospital	 reports authenticated Tracker	 information	 hospital	 news	 against	authentic  The	 gather	 sources	 social	 hospitals here	 recognized	 data media	 take	 understand">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.thehospitaltracker.com/">
+<meta property="og:title" content="Hospital Tracker">
+<meta property="og:description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://www.thehospitaltracker.com/">
+<meta property="twitter:title" content="Hospital Tracker">
+<meta property="twitter:description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
+hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
+authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
+behaviour can be claimed by the people who practice law or are at a place of power to take action based on authenticated hospital data">
+<meta property="twitter:image" content="">
 <meta name="description" content="The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
 hospitals, and nursing homes in critical states in India. Instead of just posting on social media, we gather 
 authenticated reports against the hospitals or anything related, so that this pack of authenticated reports and 
@@ -10,11 +35,12 @@ behaviour can be claimed by the people who practice law or are at a place of pow
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/journal/bootstrap.min.css"
     />
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
        <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
       integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
@@ -38,6 +64,7 @@ behaviour can be claimed by the people who practice law or are at a place of pow
 </span> Sign Up</a></li>
       <li class="nav-item btn btn-light"><a href="/users/login"><span><i class="fa fa-sign-in" aria-hidden="true"></i>
 </span> Login</a></li>
+<li class="nav-item btn btn-light"><a href="/about">About</a></li>
     </ul>
 
                 
@@ -116,7 +143,7 @@ ul, ol {
             <div class="col-md-4">
               <dl class="contact-list">
                 <dt>email:</dt>
-                <dd><a href="mailto:#">lobrockyl@gmail.com</a></dd>
+                <dd><a href="mailto:#">admin@thehospitaltracker.com</a></dd>
               </dl>
               
             </div>
@@ -127,6 +154,11 @@ ul, ol {
           <div class="col"><a class="social-inner" href="/about"><span class="icon mdi mdi-facebook"></span><span>About</span></a></div>
           <div class="col"><a class="social-inner" href="/contact"><span class="icon mdi mdi-instagram"></span><span>Contact</span></a></div>
           <div class="col"><a class="social-inner" href="/donate"><span class="icon mdi mdi-twitter"></span><span>Donate</span></a></div>
+          <div class="col"><a class="social-inner" href="https://www.instagram.com/hospital_tracker.co?r=nametag"><i class="fa fa-instagram" aria-hidden="true"></i>Share</a></div>
+          
+
+           
+
         </div>
       </footer>
  
