--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -33,7 +33,7 @@
   
      </div>
   <p>Get information on your hospital - Refusals,Beds and much more...</p>
-    <small>Information here is either from recognized news or from authentic crowdsourced information</small>
+    <small href="/about">Information here is either from recognized news or from authentic crowdsourced information</small>
 
   </div>
 </div>
@@ -137,7 +137,6 @@ url="/search/";
 
     
   <p><em>This information is extracted from the news and authenticated crowdsourced information</em></p>
-
     <a  href="/users/login"  class="btn btn-primary">Rectify data?</a>
     <a  href="/users/login"  class="btn btn-success">Submit a Problem</a>
 
