--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166095125-2">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-166095125-2');
+</script>
+
   <link rel="icon" type="image" href="https://i.imgur.com/43jJjSE.jpg">
   <title>Hospital Tracker</title>
   <meta name="title" content="Hospital Tracker">
