--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,12 +4,14 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166095125-2">
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166095125-3">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
-  gtag('config', 'UA-166095125-2');
+  gtag('config', 'UA-166095125-3');
 </script>
 
   <link rel="icon" type="image" href="https://i.imgur.com/43jJjSE.jpg">
@@ -172,5 +174,14 @@ ul, ol {
 
         </div>
       </footer>
- 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166095125-3">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-166095125-3');
+</script>
 </html>
