--- a/views/about.ejs
+++ b/views/about.ejs
@@ -55,6 +55,8 @@ body{
 COVID-19 pandemic situation. This was a hit to the whole human race devoid of any differences, caste creed, gender, or financial status. But as there are limited healthcare resources versus the gigantic population of our country, it has come to the stage where emergency patients are refused beds, ICUs, ventilators, or sometimes even treatment. 
 Some people have been trying hospital after hospital yet failed to save their loved ones. 
 Sometimes situations worsen and it becomes very hard to see your loved one in pain. 
+<img  src="/HT-PixTeller (2).png" class="card-img" alt="ss"/>  
+
 Situations are worse for the people who don't have any political reach or even enough money to receive healthcare. 
 Finally, people resort to social media to make their personal issue public hoping some action would be taken but is that really the case?
 The Hospital Tracker is a non-profit social platform aimed to gather these reports against the healthcare giants, 
