--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -168,7 +168,7 @@ ul, ol {
           <div class="col"><a class="social-inner" href="/about"><span class="icon mdi mdi-facebook"></span><span>About</span></a></div>
           <div class="col"><a class="social-inner" href="/contact"><span class="icon mdi mdi-instagram"></span><span>Contact</span></a></div>
           <div class="col"><a class="social-inner" href="/donate"><span class="icon mdi mdi-twitter"></span><span>Donate</span></a></div>
-          <div class="col"><a class="social-inner" href="https://www.instagram.com/hospital_tracker.co?r=nametag"><i class="fa fa-instagram" aria-hidden="true"></i>Share</a></div>
+          <div class="col"><a class="social-inner" href="https://www.instagram.com/hospital_tracker.co?r=nametag">Share</a></div>
           
 
            
