--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -18,6 +18,7 @@
     html .ui-autocomplete {
     height: 100px;
     } 
+    
   </style>
    <?xml version="1.0" encoding="utf-8"?>
 
@@ -43,7 +44,10 @@
 
 </div>
 </div>
-<img  src="/HT-PixTeller (3).png" class="card-img" alt="ss"/>  
+<link rel="stylesheet" href="/main.css"/>
+<img  src="/HT-PixTeller (1).png"  alt="ss" class="card-img" id="explainer1"/>  
+
+<img  src="/HT-PixTeller (3).png"  alt="ss" id="explainer2"/>  
 <div class="card mb-0" >
       <div class="row no-gutters">
         <div class="col-md-4">
