--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -139,6 +139,82 @@ ul, ol {
     visibility: hidden;
     transition: .22s ease;
 }
+/* Footer */
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: #007b5e;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+#footer {
+    background: #007b5e !important;
+}
+#footer h5{
+	padding-left: 10px;
+    border-left: 3px solid #eeeeee;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color:#ffffff;
+}
+#footer a {
+    color: #ffffff;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+#footer ul.social li{
+	padding: 3px 0;
+}
+#footer ul.social li a i {
+    margin-right: 5px;
+	font-size:25px;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+#footer ul.social li:hover a i {
+	font-size:30px;
+	margin-top:-10px;
+}
+#footer ul.social li a,
+#footer ul.quick-links li a{
+	color:#ffffff;
+}
+#footer ul.social li a:hover{
+	color:#eeeeee;
+}
+#footer ul.quick-links li{
+	padding: 3px 0;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+#footer ul.quick-links li:hover{
+	padding: 3px 0;
+	margin-left:5px;
+	font-weight:700;
+}
+#footer ul.quick-links li a i{
+	margin-right: 5px;
+}
+#footer ul.quick-links li:hover a i {
+    font-weight: 700;
+}
+
+@media (max-width:767px){
+	#footer h5 {
+    padding-left: 0;
+    border-left: transparent;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+}
+}
+
     </style>
     
 
@@ -147,16 +223,23 @@ ul, ol {
         <div class="container">
           <div class="row row-30">
             <div class="col-md-4 col-xl-5">
-              <div class="pr-xl-4"><a class="brand" href="/"><img src="https://i.imgur.com/43jJjSE.jpg" width="30" height="30" class="d-inline-block align-top" alt=""></a>
-                <p>All the information provided is authenticated by us or is sourced from authentic sources and recognized news reports.</p>
-                <!-- Rights-->
-                <p class="rights"><span><i class="fa fa-copyright" aria-hidden="true"></i>
+              <div class="pr-xl-4"><a class="navbar-brand" href="/"><img src="https://i.imgur.com/43jJjSE.jpg" width="30" height="30" class="d-inline-block " alt=""></a> <p class="rights"><span><i class="fa fa-copyright" aria-hidden="true"></i>
                 </span><span class="copyright-year">2020</span><span>Hospital Tracker</span></p>
+                	<ul class="list-unstyled quick-links">
+						<li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						<li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
+						<li><a href="/about"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						<li><a href="/login"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						<li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact Us</a></li>
+					</ul>
+                <!--p>All the information provided is authenticated by us or is sourced from authentic sources and recognized news reports.</p-->
+                <!-- Rights-->
+               
               </div>
             </div>
             <div class="col-md-4">
               <dl class="contact-list">
-                <dt>email:</dt>
+               
                 <dd><a href="mailto:#">admin@thehospitaltracker.com</a></dd>
               </dl>
               
